--- a/doc/changelog
+++ b/doc/changelog
@@ -8,7 +8,7 @@ ocrodjvu (0.12) unstable; urgency=low
 
   [ Jakub Wilk ]
   * Remake the build system.
-    The new build system if based on makefiles.
+    The new build system is based on makefiles.
   * Add “-j auto” to start as many OCR threads as the number of available
     CPUs.
   * Disallow -j without arguments. (It did the same thing as “-j auto”.)
