--- a/doc/changelog
+++ b/doc/changelog
@@ -1,8 +1,14 @@
-ocrodjvu (0.12.1) UNRELEASED; urgency=low
+ocrodjvu (0.13) unstable; urgency=low
 
-  * 
+  [ FriedrichFroebel ]
+  * Port to Python 3. At least Python 3.6 is required now.
+  * Migrate tests from `nose` to plain `unittest` stdlib module.
+  * Conform to PEP8 coding style.
+  * Use standardized `setup.py` based approach.
+  * Clean-up directory structure to not use generic `lib`.
+  * Drop support for outdated ocropus/ocropy engine.
 
- -- Jakub Wilk <jwilk@jwilk.net>  Sat, 29 May 2021 14:16:01 +0200
+ -- FriedrichFroebel  Sun, 15 Jan 2023 17:13:54 +0100
 
 ocrodjvu (0.12) unstable; urgency=low
 
